index.html changed

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>CSS Pratcie</title>
 </head>
 <body>
-    <div id="intro">
-        <p>This is <span>some</span> text!</p>
+    <h1>Speech Recongintion using JavaScript</h1>
+    <p>Tap/click  then say a color to change the background color of the App </p>
+    <div class="output"><em>....diagnostics message</em>
     </div>
-    <script src=index.js></script>
 </body>
+<script src=index.js></script>
 </html>
