--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <title>CSS Pratcie</title>
 </head>
 <body>
-    <h1>Speech Recongintion using JavaScript</h1>
-    <p>Tap/click  then say a color to change the background color of the App </p>
-    <div class="output"><em>....diagnostics message</em>
+    <section>
+    <h1>Speech Recongintion</h1>
+    <p>Available in Chrome Only</p>
+    <div class="container">
+        <div class="texts">
+                  <p id ="output">Print the message:<br></p>
+                <button id="start">Start</button>
+                <button id = "stop">Stop</button>
+        </div>
     </div>
+    
 </body>
 <script src=index.js></script>
 </html>
